category update and delete code added
