# src/api/routers/category.router.ts
@@ -7,17 +7,25 @@ import {
 import categoryController from "../controllers/category.controller";
 const categoryRouter = Router();
 
-categoryRouter
-  .route("/create")
-  .post(
-    verifyToken,
-    authorizePermissions("admin"),
-    catchError(categoryController.createCategory)
-  );
 categoryRouter.route("/").get(catchError(categoryController.getAllCategories));
-
 categoryRouter
   .route("/:cateId")
   .get(catchError(categoryController.getOneCategory));
+
+categoryRouter.use(verifyToken);
+categoryRouter
+  .route("/create")
+  .post(
+    authorizePermissions("admin"),
+    catchError(categoryController.createCategory)
+  );
+
+categoryRouter
+  .route("/update/:categoryId")
+  .patch(catchError(categoryController.updateCategory));
+
+categoryRouter
+  .route("/delete/:categoryId")
+  .delete(catchError(categoryController.deleteCategory));
 
 export default categoryRouter;
